fix: layout issues

--- a/widget/KBDLayout/style.scss
+++ b/widget/KBDLayout/style.scss
@@ -8,7 +8,7 @@ window.KBDLayout {
   box.KBDLayout {
     background: color.mix($background, $solid-bg, 50%);
     border-radius: 12px;
-    padding: 22px 0px 32px 0px;
+    padding: 22px 24px 32px 24px;
     margin: 20px;
     box-shadow: 0px 0px 15px -1px rgba(0,0,0,0.2);
     &.Hidden { background: transparent; }
